Fix input field not shown on mobile, made chat-box smaller

--- a/public/static/styles/main.css
+++ b/public/static/styles/main.css
@@ -56,7 +56,6 @@ section {
 
 .top {
   display: flex;
-  gap: 20px;
   flex-direction: column;
 }
 
@@ -67,6 +66,7 @@ section {
   gap: 20px;
   justify-content: space-between;
   padding-left: 0;
+  margin: 0;
 }
 
 .word-container .letter-wrapper, .word-container .loading-letter {
@@ -93,6 +93,15 @@ section {
   animation: wave-text 3s ease-in-out infinite;
 }
 
+.hint {
+  text-align: center;
+  font-size: 24px;
+  font-family: "Kanit", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: var(--yellow-dark);
+}
+
 @media only screen and (max-width: 600px) {
   .word-container {
     gap: 10px;
@@ -101,18 +110,13 @@ section {
     font-size: 30px;
     height: 80px;
   }
-}
-
-.hint {
-  font-size: 24px;
-  font-family: "Kanit", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: var(--yellow-dark);
+  .hint {
+    font-size: 16px;
+  }
 }
 
 section #chat-box {
-  height: 300px;
+  height: 110px;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -123,6 +127,7 @@ section #chat-box {
   font-size: 24px;
   font-style: normal;
   color: var(--yellow-dark);
+  margin-bottom: 10px;
 }
 
 ::-webkit-scrollbar {
